@@ -7,6 +7,7 @@
 	<spooldir>.</spooldir>
 
 	<!-- The location of the PID file.. if relative, relative to this dir. -->
+	<!-- Comment out if you do not want a pid file -->
 	<pid>PyICQt.pid</pid>
 
 	<!-- The IP address of the main Jabberd server -->
